fix hero image is overlapping the text

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -83,10 +83,8 @@ header {
 }
 
 .heroImage {
-  position: fixed;
-  right: 0%;
-  z-index: 0;
-  bottom: 0%;
+  width:300px;
+  height:300px;
 
 }
 
